Fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -973,7 +973,7 @@ textarea{
     flex-basis: 30%;
     border-radius: 20px;
     background-color: transparent;
-
+    justify-content: center;
 }
 
 .card3-Contact{
